apps/prowlarr/prowlarr-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prowlarr-ingress
  namespace: media-hub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prowlarr.10.0.1.253.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
